Closed Bug 145037 Opened 22 years ago Closed 22 years ago

Print dialog title is incorrect

Categories

(Core :: Printing: Output, defect)

x86
Windows 98
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: rubydoo123, Assigned: rods)

Details

(Whiteboard: [adt1 rtm] custrtm-)

Attachments

(1 file)

The print dialog title has the string:
Flying Own Print Dialog

The title should be:
Print
if Bug# 115136 gets checked in this bug can go away.
adding rtm markings since this needs to be fixed.
Keywords: nsbeta1+
Whiteboard: [adt1 rtm]
Attached patch patchSplinter Review
removing the one line that sets the title for debugging, originally this should
have been ifdef'ed out
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.0
Comment on attachment 83906 [details] [diff] [review]
patch

r=dcone
Attachment #83906 - Flags: review+
Comment on attachment 83906 [details] [diff] [review]
patch

sr=kin@netscape.com
Attachment #83906 - Flags: superreview+
fixed
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
verified in 5/20 trunk build.
Status: RESOLVED → VERIFIED
adt1.0.0
Keywords: adt1.0.0
adding adt1.0.0+ for checkin to the 1.0 branch.  Please get drivers approval
before checking in.
Keywords: adt1.0.0adt1.0.0+
Whiteboard: [adt1 rtm] → [adt1 rtm] custrtm-
changing to adt1.0.1+ for checkin to the 1.0 branch for the Mozilla1.0.1
milestone.  Please get drivers approval before checking in.
Keywords: adt1.0.0+adt1.0.1+
Please get drivers approval and then check this in ASAP.
Keywords: mozilla1.0.1
this was already in a different checkin Bug 115136
Keywords: mozilla1.0.1fixed1.0.1
verified in 6/7 branch build.
Keywords: verified1.0.1
removing fixed1.0.1 keyword
Keywords: fixed1.0.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: