Removing debug line for setting dialog title. Bug 145037 r=dcone sr=kin